     which includes two more tables, one for linenumbers and one for the code, should work
     even there... (milian)
  -  Minor style changes to the following languages:
     * cpp-qt (milian)
  -  Improvements to language files (BenBE, milian)
     * Added MinSpareThread\MaxSpareThreads to Apache highlighter (BenBE)
     * Added new Keyword group for APT sources.list highlighter (BenBE)
Version 1.0.8
  -  Added language files
     * APT sources.list (milian)
     * Boo (Marcus Griep)
     * CIL (Common Intermediate Language, .NET Assembly) (Marcus Griep)
     * COBOL (Benny Baumann)
     * Gnuplot (milian)
     * KLoneC (Mickael Auger)
     * KLoneC++ (Mickael Auger)
     * PIC16xxx assembler (Phil Mattison)
     * POV-Ray (Carl Fürstenberg)
     * PowerShell (Frode Aarebrot)
     * Progress (Marco Aurelio de Pasqual)
     * TypoScript (Jan-Philipp Halle)
     * Xorg configuration (milian)
  -  Make GeSHi's constructor arguments optional, so something like `$foo = new GeSHi;` is possible. (milian)
  -  Added an optimizer for lists to regular expressions. Using these cached lists results in a speedup of approx. 50%.
     The slightly increased memory consumption (~150KB for PHP language file) is more than worth it! (milian)
  -  Some more memory & speed optimizations all over GeSHi (milian)
     * Reduced memory overhead when highlighting keywords (BenBE)
     * Keyword Linking now uses considerably less strtolower calls (milian)
     * Cache Symbol Search Regexp and make Symbol Highlighting faster (milian)
     * Use more native functions like substr_replace and strcasecmp to speed things up (milian)
     * Use considerably less strlen() calls on various points by caching the results (milian)
     * Properly set comments to be case insensitive where appropriate to increase performance (milian)
     * Improve the performance of the strict mode tokenizer, making highlighting of languages like
       HTML, ColdFusion or XML faster (milian)